# glassbox

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: sample_after.txt  sample_before.txt
data/: tiny_shakespeare.txt
from_numpy/: __init__.py  attention_numpy.py
glassbox/: __init__.py  attention.py  config.py  data.py  model.py  sample.py  tokenizer.py  train.py
scripts/: train_demo.py
tests/: test_attention_vs_torch.py  test_numpy_backward.py  test_overfit.py  test_shapes.py
